switched to new .toList()